--- a/frontend/webapp/package.json
+++ b/frontend/webapp/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
