--- a/frontend/webapp/package.json
+++ b/frontend/webapp/package.json
@@ -25,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "https://debttesting.netlify.app",
   "eslintConfig": {
     "extends": [
       "react-app",
